<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mentalmath.MainActivity">

    <TextView
        android:id="@+id/txtStaticXP"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/XP"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtXP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/txtStaticXP"
        android:text="@string/XPValue" />

    <TextView
        android:id="@+id/txtEasyUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEasy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Easy_Unlock" />

    <TextView
        android:id="@+id/txtMediumUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMedium"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Medium_Unlock" />

    <TextView
        android:id="@+id/txtHardUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHard"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Hard_Unlock" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Easy" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@+id/btnEasy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Medium" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@+id/btnMedium"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Hard" />

</RelativeLayout>