<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mentalmath.MainActivity">

    <TextView
        android:id="@+id/txtStaticXP"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/XP"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStaticRight"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStaticXP"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/Right"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStaticWrong"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStaticRight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/Wrong"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtXP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/txtStaticXP" />

    <TextView
        android:id="@+id/txtRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtXP"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/txtStaticRight"
        android:textColor="@color/colorCorrect" />

    <TextView
        android:id="@+id/txtWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/txtStaticWrong"
        android:textColor="@color/colorWrong" />

    <io.github.sidvenu.mathjaxview.MathJaxView
        android:id="@+id/mathView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CL_TaskInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />


    <TextView
        android:id="@+id/txtStaticAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mathView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/Answer"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtOutcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CL_Answer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_TaskInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWrong"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CL_Left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CL_Instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtStaticInstructions"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Instruction"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtInstructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toEndOf="@+id/txtStaticInstructions"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CL_Difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CL_Instruction">

                <TextView
                    android:id="@+id/txtStaticDifficulty"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Difficulty"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtDifficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintStart_toEndOf="@+id/txtStaticDifficulty"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CL_Right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/CL_Left"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CL_Category"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtStaticCategory"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Category"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAlignment="textEnd"
                    app:layout_constraintStart_toEndOf="@id/txtStaticCategory"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CL_Topic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CL_Category">

                <TextView
                    android:id="@+id/txtStaticTopic"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Topic"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTopic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintStart_toEndOf="@+id/txtStaticTopic"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_Answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStaticAnswer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:foregroundGravity="center">

        <RadioGroup
            android:id="@+id/rdgAnswer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/AnswerGDL"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rdb1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rdb2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rdb3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rdb4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rdb5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/AnswerGDL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/AnswerGDL"
            app:layout_constraintTop_toTopOf="parent">

            <io.github.sidvenu.mathjaxview.MathJaxView
                android:id="@+id/mathViewR1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <io.github.sidvenu.mathjaxview.MathJaxView
                android:id="@+id/mathViewR2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <io.github.sidvenu.mathjaxview.MathJaxView
                android:id="@+id/mathViewR3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <io.github.sidvenu.mathjaxview.MathJaxView
                android:id="@+id/mathViewR4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <io.github.sidvenu.mathjaxview.MathJaxView
                android:id="@+id/mathViewR5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>